# QIDISlicer

./: .clang-format  .gitignore  Build.PL  CMakeLists.txt  CMakePresets.json  QIDISlicer.sublime-project  QIDISlicer.version  README.md  build_win.bat  github_test.txt  version.inc
bundled_deps/: CMakeLists.txt
bundled_deps/admesh/: CMakeLists.txt
bundled_deps/admesh/admesh/: normals.cpp  shared.cpp  stlinit.cpp
bundled_deps/agg/: CMakeLists.txt
bundled_deps/avrdude/: CMakeLists.txt
bundled_deps/avrdude/avrdude/: README  ac_cfg.h  arduino.c  main.c  stk500.c  stk500v2.c  update.c
bundled_deps/hidapi/: CMakeLists.txt
bundled_deps/hints/: HintsToPot.cpp
bundled_deps/imgui/: CMakeLists.txt  README.md
bundled_deps/imgui/imgui/: imconfig.h  imgui.h  imgui_draw.cpp  imgui_widgets.cpp
bundled_deps/int128/: Int128.hpp
bundled_deps/libigl/: CMakeLists.txt
bundled_deps/libnest2d/: CMakeLists.txt
bundled_deps/localesutils/: LocalesUtils.cpp  LocalesUtils.hpp
bundled_deps/miniz/: README.txt  miniz.c
bundled_deps/qoi/: qoilib.c
sandboxes/wx_gl_test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  QIDISlicer.cpp  QIDISlicer.hpp  QIDISlicer_app_msvc.cpp
src/CLI/: CLI.hpp  CLI_DynamicPrintConfig.hpp  GuiParams.cpp  LoadPrintData.cpp  PrintHelp.cpp  ProcessActions.cpp  ProcessTransform.cpp  ProfilesSharingUtils.cpp  ProfilesSharingUtils.hpp  Run.cpp  Setup.cpp
src/admesh/: shared.cpp  stl.h
src/ankerl/: README.txt
src/avrdude/: README  ac_cfg.h  avrdude-slic3r.conf  stk500v2.c  stk500v2_private.h
src/clipper/: CMakeLists.txt  clipper.cpp  clipper.hpp
src/hints/: HintsToPot.cpp
src/imgui/: CMakeLists.txt  imconfig.h  imgui_widgets.cpp  imstb_truetype.h
src/libnest2d/: CMakeLists.txt
src/libseqarrange/: CMakeLists.txt
src/libseqarrange/src/: seq_defs.hpp  seq_interface.cpp  seq_preprocess.cpp  seq_preprocess.hpp  seq_sequential.cpp  seq_sequential.hpp  seq_utilities.cpp  seq_utilities.hpp  sequential_decimator.cpp  sequential_decimator.hpp
src/libseqarrange/test/: qidiparts.hpp  seq_test_interface.cpp  seq_test_interface.hpp  seq_test_polygon.cpp  seq_test_polygon.hpp  seq_test_preprocess.cpp  seq_test_preprocess.hpp  seq_test_sequential.cpp  seq_test_sequential.hpp
src/libslic3r/: AABBMesh.cpp  AABBMesh.hpp  AABBTreeLines.hpp  AStar.hpp  AnyPtr.hpp  AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  ArrangeHelper.cpp  ArrangeHelper.hpp  BlacklistedLibraryCheck.cpp  BoostAdapter.hpp  BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  Brim.cpp  BuildVolume.cpp  BuildVolume.hpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  ClipperZUtils.hpp  Color.cpp  Color.hpp  Config.cpp  Config.hpp  CustomGCode.cpp  CustomGCode.hpp  CutSurface.cpp  CutSurface.hpp  CutUtils.cpp  CutUtils.hpp  EdgeGrid.cpp  EdgeGrid.hpp  ElephantFootCompensation.cpp  ElephantFootCompensation.hpp  Emboss.cpp  Emboss.hpp  (+172 more)
src/libslic3r/Algorithm/: PathSorting.hpp  RegionExpansion.cpp  RegionExpansion.hpp
src/libslic3r/Arachne/: PerimeterOrder.cpp  PerimeterOrder.hpp  SkeletalTrapezoidation.cpp  SkeletalTrapezoidation.hpp  (+4 more)
src/miniz/: README-Prusa.txt  miniz.h
src/occt_wrapper/: CMakeLists.txt  OCCTWrapper.cpp  OCCTWrapper.hpp
src/qoi/: CMakeLists.txt  README.md
src/slic3r/: CMakeLists.txt  pchheader.hpp
src/slic3r-arrange/: CMakeLists.txt
src/slic3r-arrange-wrapper/: CMakeLists.txt
src/tcbspan/: README.md
tests/: CMakeLists.txt  catch_main.hpp  test_utils.hpp
tests/arrange/: CMakeLists.txt  test_arrange.cpp  test_arrange_integration.cpp
tests/cpp17/: main.cpp
tests/data/: default_fff.ini  prusaparts.cpp  prusaparts.hpp  qidiparts.cpp  qidiparts.hpp  seam_test_object.3mf
tests/fff_print/: CMakeLists.txt  benchmark_seams.cpp  fff_print_tests.cpp  test_avoid_crossing_perimeters.cpp  test_bridges.cpp  test_cancel_object.cpp  test_clipper.cpp  test_cooling.cpp  test_custom_gcode.cpp  test_data.cpp  test_data.hpp  test_extrusion_entity.cpp  test_fill.cpp  test_flow.cpp  test_gaps.cpp  test_gcode.cpp  test_gcode_travels.cpp  test_gcodefindreplace.cpp  test_gcodewriter.cpp  test_infill_above_bridges.cpp  test_layers.cpp  test_model.cpp  test_multi.cpp  test_perimeters.cpp  test_print.cpp  test_printgcode.cpp  test_printobject.cpp  test_retraction.cpp  test_seam_aligned.cpp  test_seam_geometry.cpp  test_seam_perimeters.cpp  test_seam_random.cpp  test_seam_rear.cpp  test_seam_scarf.cpp  test_seam_shells.cpp  test_shells.cpp  test_skirt_brim.cpp  test_support_material.cpp  test_thin_walls.cpp  test_trianglemesh.cpp
tests/libnest2d/: CMakeLists.txt  libnest2d_tests_main.cpp
tests/libslic3r/: CMakeLists.txt  libslic3r_tests.cpp  test_3mf.cpp  test_aabbindirect.cpp  test_anyptr.cpp  test_arachne.cpp  test_arc_welder.cpp  test_astar.cpp  test_clipper_offset.cpp  test_clipper_utils.cpp  test_color.cpp  test_config.cpp  test_curve_fitting.cpp  test_cut_surface.cpp  test_elephant_foot_compensation.cpp  test_emboss.cpp  test_expolygon.cpp  test_geometry.cpp  test_hollowing.cpp  test_indexed_triangle_set.cpp  test_jump_point_search.cpp  test_kdtreeindirect.cpp  test_layer_region.cpp  test_line.cpp  test_marchingsquares.cpp  test_meshboolean.cpp  test_multiple_beds.cpp  test_mutable_polygon.cpp  test_mutable_priority_queue.cpp  test_optimizers.cpp  test_placeholder_parser.cpp  test_png_io.cpp  test_point.cpp  test_polygon.cpp  test_polyline.cpp  test_quadric_edge_collapse.cpp  test_region_expansion.cpp  test_static_map.cpp  test_stl.cpp  test_support_spots_generator.cpp  (+5 more)
tests/sla_print/: CMakeLists.txt  sla_archive_readwrite_tests.cpp  sla_lineUtils_tests.cpp  sla_parabola_tests.cpp  sla_print_tests.cpp  sla_raycast_tests.cpp  sla_supptgen_tests.cpp  sla_supptreeutils_tests.cpp  sla_test_utils.cpp  sla_test_utils.hpp  sla_vectorUtils_tests.cpp  sla_voronoi_graph_tests.cpp  sla_zcorrection_tests.cpp
tests/slic3rutils/: CMakeLists.txt  secretstore_tests.cpp  slic3r_arrangejob_tests.cpp  slic3r_jobs_tests.cpp  slic3r_version_tests.cpp
tests/thumbnails/: CMakeLists.txt  test_thumbnails_ini_string.cpp  test_thumbnails_input_string.cpp
(+1007 files in other folders)
